added frontend visualization and initial server

--- a/front.html
+++ b/front.html
@@ -5,6 +5,8 @@
             add System function such as Empty Trash, Show Trash, Quit, Log Out, Sleep, Restart, Shut Down
             menu box
             change theme
+            server: googloe cloud
+            sandbox
 -->
 <html lang="en">
     <head>
