--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- TODO: 
+<!-- TODO:
             catch exception
             auto completion g -> google y -> yahoo  youtube amazon  see alfred web search
             add System function such as Empty Trash, Show Trash, Quit, Log Out, Sleep, Restart, Shut Down
@@ -9,7 +9,7 @@
 -->
 <html lang="en">
   <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Mr. Carson - The Butler</title>
@@ -27,7 +27,7 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
-	<!-- Icons -->
+    <!-- Icons -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
@@ -96,7 +96,7 @@
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse in">
                               <div class="panel-body">
-                                <p>This is a web-based productivity helper that allows a user to use the keyboard to perform tasks  quickly, such as searching online, searching the filesystem, retrieving passwords, and launching applications.
+                                <p>Mr.Carson is a web-based productivity helper that allows a user to use the keyboard to perform tasks  quickly, such as searching online, searching the filesystem, retrieving passwords, and launching applications.
 </p>
                               </div>
                             </div>
