--- a/web/index.html
+++ b/web/index.html
@@ -85,6 +85,7 @@
                 </div><!-- ./col-md-5 -->
 
                     <div class="col-md-5 col-md-offset-2">
+                    <div id="config-drop-zone">Drop config file here!</div>
                     <div class="panel-group" id="accordion">
                           <div class="panel panel-default">
                             <div class="panel-heading">
@@ -96,8 +97,13 @@
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse in">
                               <div class="panel-body">
-                                <p>Mr.Carson is a web-based productivity helper that allows a user to use the keyboard to perform tasks  quickly, such as searching online, searching the filesystem, retrieving passwords, and launching applications.
-</p>
+                                <p>
+                                  Mr.Carson is a web-based productivity helper
+                                  that allows a user to use the keyboard to
+                                  perform tasks  quickly, such as searching
+                                  online, searching the filesystem, retrieving
+                                  passwords, and launching applications.
+                                </p>
                               </div>
                             </div>
                           </div>
