Use config file.

--- a/web/index.html
+++ b/web/index.html
@@ -77,7 +77,7 @@
                             <a href="#" class="pull-right">Go to next <i class="fa fa-angle-double-right"></i></a>
                             </div><!-- ./meniu_links -->
 
-                            <div id="output"><div>
+                            <output id="output"><output>
                         </div><!-- ./unfold -->
 
                     </aside><!-- ./aside -->
