--- a/web/index.html
+++ b/web/index.html
@@ -129,14 +129,22 @@
                                             <li>Youtube: &emsp;&emsp;&nbsp;yo/yutube + space + keywords</li>
                                             <li>Amazon: &emsp;&emsp;&nbsp;a/amazon + space + keywords</li>
                                         </ul>
-                                    <li>File Search: &emsp;&emsp;' + keywords</li>
+                                    <li>File System</li>
+                                        <ul>
+                                            <li>File Search: &emsp;&emsp;' + keywords</li>
+                                            <li>File Open: &emsp;&emsp; Click the file</li>
+                                        </ul>
                                     <li>Application Launching</li>
                                         <ul>
+                                            <li>Chrome: &emsp;&emsp;&emsp;ch/chrome</li>
+                                            <li>Calendar: &emsp;&emsp;&emsp;ca/calendar</li>
                                             <li>Dictionary: &nbsp;&nbsp;d/dic + space + word</li>
-                                            <li>Slack: &emsp;&emsp;&emsp;s/slack</li>
                                             <li>Firefox: &emsp;&emsp;&emsp;f/firefox</li>
-                                            <li>Chrome: &emsp;&emsp;&emsp;c/chrome</li>
-                                            <li>TextEdit: &emsp;&emsp;&emsp;t/text</li>
+                                            <li>iTerm: &emsp;&emsp;&emsp;i/iterm</li>
+                                            <li>Slack: &emsp;&emsp;&emsp;sl/slack</li>
+                                            <li>Safari: &emsp;&emsp;&emsp;sa/safari</li>
+                                            <li>TextEdit: &emsp;&emsp;&emsp;text</li>
+                                            <li>Terminal: &emsp;&emsp;&emsp;ter|terminal</li>
                                         </ul>
                                     <li>Calculator: &emsp;&emsp;= + arithmetic expression</li>
                                     <li>Password Management</li>
@@ -144,6 +152,9 @@
                                             <li>KeePass: &nbsp;&nbsp;kee + space + keywords</li>
                                         </ul>
                                     <li>System</li>
+                                        <ul>
+                                            <li>Empty Trash: &emsp;&emsp;&emsp;et</li>
+                                        </ul>
                                 </ul>
                               </div>
                             </div>
