Add open-trash plugin and the option to empty it after openning

--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <!-- TODO:
-            fix how may I help you sir
-            catch exception
             auto completion g -> google y -> yahoo  youtube amazon  see alfred web search
-            add System function such as Empty Trash, Show Trash, Quit, Log Out, Sleep, Restart, Shut Down, Volume Up/Down
-            menu box
             change theme
             sandbox
 -->
@@ -69,14 +65,9 @@
                                         onfocus="if (this.value == 'How may I help you, sir/ma\'am?') {this.value = '';}"
                                         id="s"
                                         disabled>
-                                    <div class="search-me"><a href="#"><i class="fa fa-search"></i></a></div>
+                                    <!--<div class="search-me"><a href="#"><i class="fa fa-search"></i></a></div>-->
                                 </div>
                             </form>
-
-                            <!-- <div class="meniu_links">
-                            <a href="#" class="pull-left"><i class="fa fa-angle-double-left"></i> Go back</a>
-                            <a href="#" class="pull-right">Go to next <i class="fa fa-angle-double-right"></i></a>
-                            </div>./meniu_links -->
 
                             <output id="output"><output>
                         </div><!-- ./unfold -->
@@ -153,7 +144,9 @@
                                         </ul>
                                     <li>System</li>
                                         <ul>
+                                            <li>Open Trash: &emsp;&emsp;&emsp;trash</li>
                                             <li>Empty Trash: &emsp;&emsp;&emsp;et</li>
+                                            <li>Sleep: &emsp;&emsp;&emsp;sleep</li>
                                         </ul>
                                 </ul>
                               </div>
