--- a/web/index.html
+++ b/web/index.html
@@ -110,6 +110,7 @@
                             <div id="collapseTwo" class="panel-collapse collapse">
                               <div class="panel-body">
                                 <ul>
+                                    <li>Clear Input Bar: cmd+delete</li>
                                     <li>Web Search</li>
                                         <ul>
                                             <li>Google: &emsp;&emsp;&nbsp;g/google + space + keywords</li>
@@ -117,7 +118,7 @@
                                             <li>Google - Maps: &emsp;&emsp;&nbsp;maps + space + keywords</li>
                                             <li>Bing: &emsp;&emsp;&nbsp;b/bing + space + keywords</li>
                                             <li>Yahoo: &emsp;&emsp;&nbsp;y/yahoo + space + keywords</li>
-                                            <li>Youtube: &emsp;&emsp;&nbsp;yo/yutube + space + keywords</li>
+                                            <li>Youtube: &emsp;&emsp;&nbsp;yo/youtube + space + keywords</li>
                                             <li>Amazon: &emsp;&emsp;&nbsp;a/amazon + space + keywords</li>
                                         </ul>
                                     <li>File System</li>
