--- a/web/index.html
+++ b/web/index.html
@@ -111,43 +111,80 @@
                               <div class="panel-body">
                                 <ul>
                                     <li>Web Search</li>
-                                        <ul>
-                                            <li>Google: &emsp;&emsp;&nbsp;g/google + space + keywords</li>
-                                            <li>Google - I'm Feeling Lucky: &emsp;&emsp;&nbsp;lucky + space + keywords</li>
-                                            <li>Google - Maps: &emsp;&emsp;&nbsp;maps + space + keywords</li>
-                                            <li>Bing: &emsp;&emsp;&nbsp;b/bing + space + keywords</li>
-                                            <li>Yahoo: &emsp;&emsp;&nbsp;y/yahoo + space + keywords</li>
-                                            <li>Youtube: &emsp;&emsp;&nbsp;yo/yutube + space + keywords</li>
-                                            <li>Amazon: &emsp;&emsp;&nbsp;a/amazon + space + keywords</li>
-                                        </ul>
+                                        <div class="row">
+                                            <div class="col-md-6">Google:                    </div><div class="col-md-6">g/google&lt;SPACE&gt;keywords  </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Google - I'm Feeling Lucky:</div><div class="col-md-6">lucky&lt;space&gt;keywords     </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Google Maps:               </div><div class="col-md-6">maps&lt;space&gt;keywords      </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Bing:                      </div><div class="col-md-6">b/bing&lt;space&gt;keywords    </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Yahoo:                     </div><div class="col-md-6">y/yahoo&lt;space&gt;keywords   </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Youtube:                   </div><div class="col-md-6">yo/youtube&lt;space&gt;keywords</div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Amazon:                    </div><div class="col-md-6">a/amazon&lt;space&gt;keywords  </div>
+                                        </div>
                                     <li>File System</li>
-                                        <ul>
-                                            <li>File Search: &emsp;&emsp;' + keywords</li>
-                                            <li>File Open: &emsp;&emsp; Click the file</li>
-                                        </ul>
+                                        <div class="row">
+                                            <div class="col-md-6">File Search:</div><div class="col-md-6">'keywords     </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">File Open:  </div><div class="col-md-6">Click the file</div>
+                                        </div>
                                     <li>Application Launching</li>
-                                        <ul>
-                                            <li>Chrome: &emsp;&emsp;&emsp;ch/chrome</li>
-                                            <li>Calendar: &emsp;&emsp;&emsp;ca/calendar</li>
-                                            <li>Dictionary: &nbsp;&nbsp;d/dic + space + word</li>
-                                            <li>Firefox: &emsp;&emsp;&emsp;f/firefox</li>
-                                            <li>iTerm: &emsp;&emsp;&emsp;i/iterm</li>
-                                            <li>Slack: &emsp;&emsp;&emsp;sl/slack</li>
-                                            <li>Safari: &emsp;&emsp;&emsp;sa/safari</li>
-                                            <li>TextEdit: &emsp;&emsp;&emsp;text</li>
-                                            <li>Terminal: &emsp;&emsp;&emsp;ter|terminal</li>
-                                        </ul>
-                                    <li>Calculator: &emsp;&emsp;= + arithmetic expression</li>
+                                        <div class="row">
+                                            <div class="col-md-6">Chrome:    </div><div class="col-md-6">ch/chrome             </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Calendar:  </div><div class="col-md-6">ca/calendar           </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Dictionary:</div><div class="col-md-6">d/dic&lt;space&gt;word</div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Firefox:   </div><div class="col-md-6">f/firefox             </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">iTerm:     </div><div class="col-md-6">i/iterm               </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Slack:     </div><div class="col-md-6">sl/slack              </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Safari:    </div><div class="col-md-6">sa/safari             </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">TextEdit:  </div><div class="col-md-6">text                  </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Terminal:  </div><div class="col-md-6">ter|terminal          </div>
+                                        </div>
+                                    <li>Calculator</li>
+                                        <div class="row">
+                                            <div class="col-md-6">Calculator:</div><div class="col-md-6">=arithmetic expression</div>
+                                        </div>
                                     <li>Password Management</li>
-                                        <ul>
-                                            <li>KeePass: &nbsp;&nbsp;kee + space + keywords</li>
-                                        </ul>
+                                        <div class="row">
+                                            <div class="col-md-6">KeePass:</div><div class="col-md-6">kee&lt;space&gt;keywords</div>
+                                        </div>
                                     <li>System</li>
-                                        <ul>
-                                            <li>Open Trash: &emsp;&emsp;&emsp;trash</li>
-                                            <li>Empty Trash: &emsp;&emsp;&emsp;et</li>
-                                            <li>Sleep: &emsp;&emsp;&emsp;sleep</li>
-                                        </ul>
+                                        <div class="row">
+                                            <div class="col-md-6">Open Trash: </div><div class="col-md-6">trash</div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Empty Trash:</div><div class="col-md-6">et   </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">Sleep:      </div><div class="col-md-6">sleep</div>
+                                        </div>
                                 </ul>
                               </div>
                             </div>
