Add .gitignore Update README.md Add Copyright notices and License information on everything

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,13 @@
+<!--
+    Copyright (c) 2017 Fan Zhang
+    This work is available under the "MIT license".
+    Please see the file COPYING in this source
+    distribution for license terms.
+-->
+
+
 <!DOCTYPE html>
 <!-- TODO:
-            auto completion g -> google y -> yahoo  youtube amazon  see alfred web search
             change theme
             sandbox
 -->
