--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,6 @@
 -->
 
 
-<!DOCTYPE html>
-<!-- TODO:
-            change theme
-            sandbox
--->
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -72,7 +67,6 @@
                                         onfocus="if (this.value == 'How may I help you, sir/ma\'am?') {this.value = '';}"
                                         id="s"
                                         disabled>
-                                    <!--<div class="search-me"><a href="#"><i class="fa fa-search"></i></a></div>-->
                                 </div>
                             </form>
 
@@ -97,11 +91,15 @@
                             <div id="collapseOne" class="panel-collapse collapse in">
                               <div class="panel-body">
                                 <p>
-                                  Mr.Carson is a web-based productivity helper
-                                  that allows a user to use the keyboard to
-                                  perform tasks  quickly, such as searching
-                                  online, searching the filesystem, retrieving
-                                  passwords, and launching applications.
+                                  Mr. Carson is a web-based utility application 
+                                  that allows user to control the operating system 
+                                  and perform tasks rapidly from keyboard.
+                                </p>
+                                <br>
+                                <p>
+                                  This application supports user custom searches and 
+                                  features and can be configured to work on various
+                                  operating systems.
                                 </p>
                               </div>
                             </div>
@@ -117,82 +115,94 @@
                             <div id="collapseTwo" class="panel-collapse collapse">
                               <div class="panel-body">
                                 <ul>
-                                    <li>Clear Input Bar: cmd+delete</li>
-                                    <li>Web Search</li>
+                                    <li>Input Bar
                                         <div class="row">
-                                            <div class="col-md-6">Google:                    </div><div class="col-md-6">g/google&lt;SPACE&gt;keywords  </div>
+                                            <div class="col-md-5 col-md-offset-1">Clear Input Bar:           </div><div class="col-md-6">&#8984;delete  </div>
+                                            <div class="col-md-5 col-md-offset-1">Jump to the front:           </div><div class="col-md-6">&#8963;a     </div>
+                                            <div class="col-md-5 col-md-offset-1">Jump to the end:           </div><div class="col-md-6">&#8963;e       </div>
+                                        </div>
+                                    </li>
+                                    <li>Web Search
+                                        <div class="row">
+                                            <div class="col-md-5 col-md-offset-1">Google:                    </div><div class="col-md-6">g / google&lt;SPACE&gt;keywords  </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Google - I'm Feeling Lucky:</div><div class="col-md-6">lucky&lt;space&gt;keywords     </div>
+                                            <div class="col-md-5 col-md-offset-1">Google - I'm Feeling Lucky:</div><div class="col-md-6">lucky&lt;space&gt;keywords       </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Google Maps:               </div><div class="col-md-6">maps&lt;space&gt;keywords      </div>
+                                            <div class="col-md-5 col-md-offset-1">Google Maps:               </div><div class="col-md-6">maps&lt;space&gt;keywords        </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Bing:                      </div><div class="col-md-6">b/bing&lt;space&gt;keywords    </div>
+                                            <div class="col-md-5 col-md-offset-1">Bing:                      </div><div class="col-md-6">b / bing&lt;space&gt;keywords    </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Yahoo:                     </div><div class="col-md-6">y/yahoo&lt;space&gt;keywords   </div>
+                                            <div class="col-md-5 col-md-offset-1">Yahoo:                     </div><div class="col-md-6">y / yahoo&lt;space&gt;keywords   </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Youtube:                   </div><div class="col-md-6">yo/youtube&lt;space&gt;keywords</div>
+                                            <div class="col-md-5 col-md-offset-1">Youtube:                   </div><div class="col-md-6">yo / youtube&lt;space&gt;keywords</div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Amazon:                    </div><div class="col-md-6">a/amazon&lt;space&gt;keywords  </div>
+                                            <div class="col-md-5 col-md-offset-1">Amazon:                    </div><div class="col-md-6">a / amazon&lt;space&gt;keywords  </div>
                                         </div>
-                                    <li>File System</li>
+                                    </li>
+                                    <li>File System
                                         <div class="row">
-                                            <div class="col-md-6">File Search:</div><div class="col-md-6">'keywords     </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-6">File Open:  </div><div class="col-md-6">Click the file</div>
-                                        </div>
-                                    <li>Application Launching</li>
-                                        <div class="row">
-                                            <div class="col-md-6">Chrome:    </div><div class="col-md-6">ch/chrome             </div>
+                                            <div class="col-md-5 col-md-offset-1">File Search:</div><div class="col-md-6">'keywords     </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Calendar:  </div><div class="col-md-6">ca/calendar           </div>
+                                            <div class="col-md-5 col-md-offset-1">File Open:  </div><div class="col-md-6">Click the file</div>
+                                        </div>
+                                    </li>
+                                    <li>Application Launching
+                                        <div class="row">
+                                            <div class="col-md-5 col-md-offset-1">Chrome:    </div><div class="col-md-6">ch / chrome             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Dictionary:</div><div class="col-md-6">d/dic&lt;space&gt;word</div>
+                                            <div class="col-md-5 col-md-offset-1">Calendar:  </div><div class="col-md-6">ca / calendar           </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Firefox:   </div><div class="col-md-6">f/firefox             </div>
+                                            <div class="col-md-5 col-md-offset-1">Dictionary:</div><div class="col-md-6">d / dic&lt;space&gt;word</div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">iTerm:     </div><div class="col-md-6">i/iterm               </div>
+                                            <div class="col-md-5 col-md-offset-1">Firefox:   </div><div class="col-md-6">f / firefox             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Slack:     </div><div class="col-md-6">sl/slack              </div>
+                                            <div class="col-md-5 col-md-offset-1">iTerm:     </div><div class="col-md-6">i / iterm               </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Safari:    </div><div class="col-md-6">sa/safari             </div>
+                                            <div class="col-md-5 col-md-offset-1">Slack:     </div><div class="col-md-6">sl / slack              </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">TextEdit:  </div><div class="col-md-6">text                  </div>
+                                            <div class="col-md-5 col-md-offset-1">Safari:    </div><div class="col-md-6">sa / safari             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Terminal:  </div><div class="col-md-6">ter|terminal          </div>
-                                        </div>
-                                    <li>Calculator</li>
-                                        <div class="row">
-                                            <div class="col-md-6">Calculator:</div><div class="col-md-6">=arithmetic expression</div>
-                                        </div>
-                                    <li>Password Management</li>
-                                        <div class="row">
-                                            <div class="col-md-6">KeePass:</div><div class="col-md-6">kee&lt;space&gt;keywords</div>
-                                        </div>
-                                    <li>System</li>
-                                        <div class="row">
-                                            <div class="col-md-6">Open Trash: </div><div class="col-md-6">trash</div>
+                                            <div class="col-md-5 col-md-offset-1">TextEdit:  </div><div class="col-md-6">text                    </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Empty Trash:</div><div class="col-md-6">et   </div>
+                                            <div class="col-md-5 col-md-offset-1">Terminal:  </div><div class="col-md-6">ter / terminal          </div>
+                                        </div>
+                                    </li>
+                                    <li>Calculator
+                                        <div class="row">
+                                            <div class="col-md-5 col-md-offset-1">Calculator:</div><div class="col-md-6">=&lt;space&gt;arithmetic expression</div>
+                                        </div>
+                                    </li>
+                                    <li>Password Management
+                                        <div class="row">
+                                            <div class="col-md-5 col-md-offset-1">KeePass:</div><div class="col-md-6">kee&lt;space&gt;keywords</div>
+                                        </div>
+                                    </li>
+                                    <li>System
+                                        <div class="row">
+                                            <div class="col-md-5 col-md-offset-1">Open Trash: </div><div class="col-md-6">trash</div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">Sleep:      </div><div class="col-md-6">sleep</div>
+                                            <div class="col-md-5 col-md-offset-1">Empty Trash:</div><div class="col-md-6">et   </div>
                                         </div>
+                                        <div class="row">
+                                            <div class="col-md-5 col-md-offset-1">Sleep:      </div><div class="col-md-6">sleep</div>
+                                        </div>
+                                    </li>
                                 </ul>
                               </div>
                             </div>
@@ -207,15 +217,15 @@
                             </div>
                             <div id="collapseThree" class="panel-collapse collapse">
                               <div class="panel-body">
+                              <label>Email</label>
+                                <ul>
+                                    <li>fzhang@pdx.edu</li>
+                                </ul>
                               <label>Address</label>
                                 <ul>
                                     <li>Portland State University</li>
                                     <li>1900 SW 4th Ave</li>
                                     <li>Portland OR 97220</li>
-                                </ul>
-                              <label>Email</label>
-                                <ul>
-                                    <li>fzhang@pdx.edu</li>
                                 </ul>
                               </div>
                             </div>
